--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.12.0",
     "nodemon": "^3.1.7"
   }
 }
