add ci/cd pipeline for server

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/app.js",
+    "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
