#4 add create appointment slots

--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "appointment_service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "amqplib": "^0.10.4",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
