--- a/server/dentist_service/package.json
+++ b/server/dentist_service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "dentist_service",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
