--- a/client/package.json
+++ b/client/package.json
@@ -1,47 +1,35 @@
 {
   "name": "client",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint --fix src"
   },
   "dependencies": {
+    "@eslint/compat": "^1.2.2",
     "axios": "^1.7.7",
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-next": "^0.25.14",
+    "leaflet": "^1.9.4",
+    "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
     "@eslint/js": "^9.14.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@iconify-json/bi": "^1.2.1",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/compiler-sfc": "^3.5.13",
     "eslint": "^9.14.0",
+    "eslint-formatter-codeframe": "^7.32.1",
     "eslint-plugin-vue": "^9.31.0",
-    "globals": "^15.12.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "globals": "^15.12.0",
+    "unplugin-icons": "^0.20.1",
+    "unplugin-vue-components": "^0.27.4",
+    "vite": "^5.4.10",
+    "vite-plugin-eslint": "^1.8.1"
+  }
 }
