--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
-    "start": "node ./dist/app.js",
-    "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
-    "test": "mocha './test/src/**/*.test.js' --timeout 5000 --exit",
-    "lint": "eslint . --fix"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -24,13 +20,6 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "chai": "^5.1.2",
-    "eslint": "^9.14.0",
-    "eslint-plugin-vue": "^9.31.0",
-    "globals": "^15.12.0",
-    "mocha": "^10.8.2",
-    "nodemon": "^3.1.7",
-    "supertest": "^7.0.0"
+    "nodemon": "^3.1.7"
   }
 }
