--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@eslint/compat": "^1.2.2",
+    "@schedule-x/events-service": "^2.7.0",
+    "@schedule-x/theme-default": "^2.7.0",
+    "@schedule-x/vue": "^2.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.25.14",
