--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mqtt": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
