--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
     "start": "node ./src/app.js",
