--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,11 @@
 {
-  "name": "server",
+  "name": "microservices",
+  "private": "true",
+  "workspaces": [
+    "appointment_service",
+    "auth_service",
+    "dentist_service"
+  ],
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
