#9 fix mqtt not connecting error

--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -2,6 +2,7 @@
   "name": "auth_service",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
