--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "serve": "vite preview",
     "lint": "eslint --fix src"
@@ -20,7 +20,8 @@
     "leaflet": "^1.9.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vue-cal": "^4.10.0"
+    "vue-cal": "^4.10.0",
+    "shared-mqtt": "file:../shared/mqtt"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
