--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -23,7 +23,8 @@
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "mongoose": "^8.8.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "shared-mqtt": "file:../../shared/mqtt"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
