--- a/dentist-client/package.json
+++ b/dentist-client/package.json
@@ -14,6 +14,8 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
+    "cli-table3": "^0.6.5",
     "inquirer": "^12.1.0",
     "uuid": "^11.0.3"
   }
