--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "tabWidth": 4,
   "useTabs": false,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "semi": false
 }
