--- a/monitoring-tool/package.json
+++ b/monitoring-tool/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongoose": "^8.8.2",
+    "dotenv": "^16.4.7",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.1",
     "shared-mqtt": "file:../../shared/mqtt"
   }
 }
