--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-leaflet": "^4.2.1",
     "shared-mqtt": "file:../shared/mqtt",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
