#35 Update compose default env var
These environment variables are painful to set up in each .env file, so it is great to have functional defaults.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -65,6 +65,7 @@ services:
         environment:
             - NODE_ENV=development
             - MONGODB_URI=mongodb://mongo-clinic/clinic_db
+            - MQTT_URI=mqtt://mqtt-broker:1883
         depends_on:
             - mongo-clinic
             - mqtt-broker
@@ -91,6 +92,7 @@ services:
         environment:
             - NODE_ENV=development
             - MONGODB_URI=mongodb://mongo-appointment/appointment_db
+            - MQTT_URI=mqtt://mqtt-broker:1883
         depends_on:
             - mongo-appointment
             - mqtt-broker
