#35 Add linting as dependency

--- a/server/clinic_service/package.json
+++ b/server/clinic_service/package.json
@@ -4,8 +4,11 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
+        "dev": "nodemon --env-file=.env ./src/app.js",
+        "start": "node ./dist/app.js",
+        "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon --env-file=.env ./src/app.js"
+        "lint": "eslint . --fix --config ../eslint.config.mjs"
     },
     "keywords": [],
     "author": "",
@@ -16,6 +19,9 @@
         "shared-mqtt": "file:../../shared/mqtt"
     },
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "eslint": "^9.17.0",
+        "globals": "^15.14.0",
         "nodemon": "^3.1.7"
     }
 }
