--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -6,10 +6,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
-    "start": "node ./src/app.js",
+    "start": "node ./dist/app.js",
     "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
     "test": "mocha './test/src/**/*.test.js' --timeout 5000 --exit",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix --config ../eslint.config.mjs"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,9 @@
     "shared-mqtt": "file:../../shared/mqtt"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "globals": "^15.14.0",
     "nodemon": "^3.1.7"
   }
 }
