#35 Update environment vars in pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,10 @@ test-appointment-service:
       alias: mongo-appointment
     - name: emqx/emqx:latest
       alias: mqtt-broker
+  variables:
+    MQTT_URI: mqtt://mqtt-broker:1883
+    NODE_ENV: development
+    MONGODB_URI: mongodb://mongo-appointment/appointment_db
   before_script:
     - apk add --no-cache mongodb-tools
     - mongoimport --uri mongodb://mongo-appointment:27017/appointment_db --collection slots --file $mock_data_path/appointment_db/seed_appointment_data.json --jsonArray --upsert --upsertFields _id
