--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,18 +67,80 @@ test-appointment-service:
     NODE_ENV: development
     MONGODB_URI: mongodb://mongo-appointment/appointment_db
   before_script:
-    - apk add --no-cache mongodb-tools
-    - mongoimport --uri mongodb://mongo-appointment:27017/appointment_db --collection slots --file $mock_data_path/appointment_db/seed_appointment_data.json --jsonArray --upsert --upsertFields _id
-    - cd $shared_module_path/mqtt && npm ci && cd ../../
+    - apk add --no-cache -q mongodb-tools
+    - mongoimport --uri $MONGODB_URI --collection slots --file $mock_data_path/appointment_db/seed_appointment_data.json --jsonArray --upsert --upsertFields _id
+    - cd $shared_module_path/mqtt && npm ci --silent && cd ../../
   script:
     - cd $appointment_service_path
-    - npm ci
+    - npm ci --silent
     - npm run start > app.log 2>&1 &
     - sleep 3
-    - npm run test:integration
+    - npm run test
   artifacts:
     paths:
       - $appointment_service_path/app.log
     expire_in: 1 hour
   dependencies:
     - build-appointment-service
+
+test-clinic-service:
+  stage: test
+  tags:
+    - docker
+  needs:
+    - build-clinic-service
+  services:
+    - name: mongo:latest
+      alias: mongo-clinic
+    - name: emqx/emqx:latest
+      alias: mqtt-broker
+  variables:
+    MQTT_URI: mqtt://mqtt-broker:1883
+    NODE_ENV: development
+    MONGODB_URI: mongodb://mongo-clinic/clinic_db
+  before_script:
+    - apk add --no-cache -q mongodb-tools
+    - mongoimport --uri $MONGODB_URI --collection clinics --file $mock_data_path/clinic_db/seed_clinic_data.json --jsonArray --upsert --upsertFields _id
+    - cd $shared_module_path/mqtt && npm ci --silent && cd ../../
+  script:
+    - cd $clinic_service_path
+    - npm ci --silent
+    - npm run start > app.log 2>&1 &
+    - sleep 3
+    - npm run test
+  artifacts:
+    paths:
+      - $clinic_service_path/app.log
+    expire_in: 1 hour
+  dependencies:
+    - build-clinic-service
+
+test-auth-service:
+  stage: test
+  tags:
+    - docker
+  needs:
+    - build-auth-service
+  services:
+    - name: mongo:latest
+      alias: mongo-auth
+    - name: emqx/emqx:latest
+      alias: mqtt-broker
+  variables:
+    MQTT_URI: mqtt://mqtt-broker:1883
+    NODE_ENV: development
+    MONGODB_URI: mongodb://mongo-auth/auth_db
+  before_script:
+    - cd $shared_module_path/mqtt && npm ci --silent && cd ../../
+  script:
+    - cd $auth_service_path
+    - npm ci --silent
+    - npm run start > app.log 2>&1 &
+    - sleep 3
+    - npm run test
+  artifacts:
+    paths:
+      - $auth_service_path/app.log
+    expire_in: 1 hour
+  dependencies:
+    - build-auth-service
