--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -18,13 +18,16 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
-    "mqtt": "^5.10.2",
     "shared-mqtt": "file:../../shared/mqtt"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "chai": "^5.1.2",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
-    "nodemon": "^3.1.7"
+    "mocha": "^11.0.1",
+    "mqtt": "^5.10.3",
+    "nodemon": "^3.1.7",
+    "uuid": "^11.0.3"
   }
 }
