--- a/server/clinic_service/package.json
+++ b/server/clinic_service/package.json
@@ -7,7 +7,7 @@
         "dev": "nodemon --env-file=.env ./src/app.js",
         "start": "node ./dist/app.js",
         "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
-        "test": "npm run test:integration && npm run test:unit",
+        "test": "npm run test:integration",
         "test:integration": "mocha test/src/integration/**/*.test.js",
         "test:unit": "mocha test/src/unit/**/*.test.js",
         "lint": "eslint . --fix --config ../eslint.config.mjs"
@@ -22,8 +22,12 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
+        "chai": "^5.1.2",
         "eslint": "^9.17.0",
         "globals": "^15.14.0",
-        "nodemon": "^3.1.7"
+        "mocha": "^11.0.1",
+        "mqtt": "^5.10.3",
+        "nodemon": "^3.1.7",
+        "uuid": "^11.0.3"
     }
 }
