--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --env-file=.env ./src/app.js",
     "start": "node ./dist/app.js",
     "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha './test/src/**/*.test.js' --timeout 5000 --exit",
     "lint": "eslint . --fix"
   },
   "keywords": [],
