--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -31,6 +31,7 @@
     "globals": "^15.12.0",
     "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
+    "nyc": "^17.1.0",
     "supertest": "^7.0.0"
   }
 }
