#34 Add unit tests for appointment booking
Added test cases for bookAppointment to handle different scenarios (Return 404 if appointment slot is not found; Return 400 if appointment slot is not available (status is 'booked')). Used sinon to mock AppointmentSlot.findById and control its return value and included setup and teardown of sinon stubs for each test to ensure clean state.

--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -32,6 +32,7 @@
     "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
     "nyc": "^17.1.0",
+    "sinon": "^19.0.2",
     "supertest": "^7.0.0"
   }
 }
