--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -144,8 +144,7 @@ services:
             - '27018:27017'
         volumes:
             - ./infrastructure/database/clinic_data:/data/db
-            - ./server/mock_data/clinic_db/init_clinic.sh:/docker-entrypoint-initdb.d/init_clinic.sh
-            - ./server/mock_data/clinic_db/seed_clinic_data.json:/docker-entrypoint-initdb.d/seed_clinic_data.json
+            - ./server/mock_data/clinic_db:/docker-entrypoint-initdb.d
         networks:
             - network-cluster
 
@@ -156,8 +155,7 @@ services:
             - '27019:27017'
         volumes:
             - ./infrastructure/database/appointment_data:/data/db
-            - ./server/mock_data/appointment_db/init_appointment.sh:/docker-entrypoint-initdb.d/init_appointment.sh
-            - ./server/mock_data/appointment_db/seed_appointment_data.json:/docker-entrypoint-initdb.d/seed_appointment_data.json
+            - ./server/mock_data/appointment_db:/docker-entrypoint-initdb.d
         networks:
             - network-cluster
 
