--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,10 +37,10 @@ test:
   tags:
     - docker
   script:
-    - echo "Starting tests in appointment_service"
-    - cd server/appointment_service
-    - npm ci
     - cd shared/mqtt
+    - npm ci
+    - echo "Starting tests in appointment_service"
+    - cd ../../server/appointment_service
     - npm ci
     - echo "Running tests"
     - npm run test
