--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -7,9 +7,9 @@
     "dev": "nodemon --env-file=.env ./src/app.js",
     "start": "node ./dist/app.js",
     "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
-    "test": "npm run test:integration",
+    "test": "npm run test:unit && npm run test:integration",
     "test:integration": "mocha test/src/integration/**/*.test.js",
-    "test:unit": "mocha test/src/unit/**/*.test.js",
+    "test:unit": "nyc mocha test/src/unit/**/*.test.js",
     "lint": "eslint . --fix"
   },
   "keywords": [],
