--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon --env-file=.env ./src/app.js",
     "start": "node ./dist/app.js",
     "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
-    "test": "mocha './test/src/**/*.test.js' --timeout 5000 --exit",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:integration": "mocha test/src/integration/**/*.test.js",
+    "test:unit": "mocha test/src/unit/**/*.test.js",
     "lint": "eslint . --fix --config ../eslint.config.mjs"
   },
   "keywords": [],
