--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -31,6 +31,7 @@
     "mocha": "^11.0.1",
     "mqtt": "^5.10.3",
     "nodemon": "^3.1.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "sinon": "^19.0.2"
   }
 }
