--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,8 +18,6 @@ services:
             - /app/frontend/.next
         env_file:
             - ./frontend/.env
-        environment:
-            - NODE_ENV=development
         networks:
             - network-cluster
         depends_on:
@@ -136,6 +134,7 @@ services:
             - '9001:9001'
         networks:
             - network-cluster
+        restart: always
 
     mongo-clinic:
         image: mongo:latest
