--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "mqtt": "^5.10.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
