--- a/monitoring-tool/package.json
+++ b/monitoring-tool/package.json
@@ -16,5 +16,8 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.1",
     "shared-mqtt": "file:../../shared/mqtt"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
