--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,14 +27,16 @@
         "./*"
       ]
     },
-    "target": "ES2017"
+    "target": "ES2017",
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "tailwind.config.js"  ],
+    ".next/types/**/*.ts",
+    "tailwind.config.js"
+  ],
   "exclude": [
     "node_modules"
   ]
