--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -124,6 +124,7 @@ services:
         networks:
             - network-cluster
 
+    #mqtt-broker instances (3)
     mqtt-broker:
         image: eclipse-mosquitto:2.0
         container_name: mqtt-broker
@@ -132,6 +133,30 @@ services:
         ports:
             - '1883:1883'
             - '9001:9001'
+        networks:
+            - network-cluster
+        restart: always
+
+    mqtt-broker2:
+        image: eclipse-mosquitto:2.0
+        container_name: mqtt-broker2
+        volumes:
+            - ./infrastructure/mqtt-broker/config:/mosquitto/config
+        ports:
+            - '2883:1883'
+            - '2901:9001'
+        networks:
+            - network-cluster
+        restart: always
+
+    mqtt-broker3:
+        image: eclipse-mosquitto:2.0
+        container_name: mqtt-broker3
+        volumes:
+            - ./infrastructure/mqtt-broker/config:/mosquitto/config
+        ports:
+            - '3883:1883'
+            - '3901:9001'
         networks:
             - network-cluster
         restart: always
@@ -167,7 +192,7 @@ services:
             - ./infrastructure/database/auth_data:/data/db
         networks:
             - network-cluster
-            
+
     mongo-notification:
         image: mongo:latest
         container_name: mongo-notification
@@ -177,6 +202,22 @@ services:
             - ./infrastructure/database/notification_data:/data/db
         networks:
             - network-cluster
+
+    # TCP load-balancer
+    mqtt-broker-lb:
+        image: haproxy:2.6
+        container_name: mqtt-broker-lb
+        volumes:
+            - ./infrastructure/haproxy/haproxy.cfg:usr/local/etc/haproxy/haproxy.cfg
+        ports:
+            - '1884:1883'
+        networks:
+            - network-cluster
+        depends_on:
+            - mqtt-broker
+            - mqtt-broker2
+            - mqtt-broker3
+        restart: always
 
 volumes:
     frontend_node_modules:
