--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -81,7 +81,7 @@ services:
         build:
             context: .
             dockerfile: server/appointment_service/Dockerfile.dev
-        container_name: appointment_service-2
+        container_name: appointment-service-2
         restart: unless-stopped
         # ContainerPort mapping to 1st appointment service
         ports:
@@ -256,8 +256,8 @@ services:
             - mqtt-broker
             - mqtt-broker2
             - mqtt-broker3
-            - appointment_service
-            - appointment_service-2
+            - appointment-service
+            - appointment-service-2
         restart: always
 
 volumes:
