--- a/server/appointment_service/package.json
+++ b/server/appointment_service/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.8.1",
     "morgan": "^1.10.0",
+    "redis": "^4.7.0",
     "shared-mqtt": "file:../../shared/mqtt"
   },
   "devDependencies": {
