#65 change compose dependency @andreibr

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,7 +24,7 @@ services:
             - clinic-service
             - appointment-service
             - auth-service
-            - mqtt-broker
+            - mqtt-broker-lb
 
     # Clinic Service
     clinic-service:
@@ -47,7 +47,7 @@ services:
             - NODE_ENV=development
         depends_on:
             - mongo-clinic
-            - mqtt-broker
+            - mqtt-broker-lb
         networks:
             - network-cluster
 
@@ -58,8 +58,6 @@ services:
             dockerfile: server/appointment_service/Dockerfile.dev
         container_name: appointment-service
         restart: unless-stopped
-        ports:
-            - '5000:5000'
         volumes:
             # Mount source code but exclude node_modules
             - ./server/appointment_service:/app/server/appointment_service
@@ -72,7 +70,7 @@ services:
             - NODE_ENV=development
         depends_on:
             - mongo-appointment
-            - mqtt-broker
+            - mqtt-broker-lb
         networks:
             - network-cluster
 
@@ -84,11 +82,11 @@ services:
         container_name: appointment-service-2
         restart: unless-stopped
         # ContainerPort mapping to 1st appointment service
-        ports:
-            - '5002:5000'
         volumes:
             - ./server/appointment_service:/app/server/appointment_service
             - ./shared:/app/shared
+            - /app/server/appointment_service/node_modules
+            - /app/shared/node_modules
         env_file:
             - ./server/appointment_service/.env
         environment:
@@ -97,7 +95,7 @@ services:
             - INSTANCE=2
         depends_on:
             - mongo-appointment
-            - mqtt-broker
+            - mqtt-broker-lb
         networks:
             - network-cluster
 
@@ -121,7 +119,7 @@ services:
             - NODE_ENV=development
         depends_on:
             - mongo-auth
-            - mqtt-broker
+            - mqtt-broker-lb
         networks:
             - network-cluster
 
@@ -256,8 +254,6 @@ services:
             - mqtt-broker
             - mqtt-broker2
             - mqtt-broker3
-            - appointment-service
-            - appointment-service-2
         restart: always
 
 volumes:
