Refactor Dockerfiles and update environment configurations to allow production setup

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,8 @@ RUN npm i && \
 COPY frontend ./
 COPY shared/mqtt ../shared/mqtt
 
+RUN npm run build
+
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "start"]
