--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -6,12 +6,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
-    "start": "node ./dist/app.js",
-    "build": "npm run lint && mkdir -p dist && cp -r src/* dist/",
+    "start": "node --env-file=.env ./src/app.js",
     "test": "npm run test:unit && npm run test:integration",
     "test:integration": "mocha test/src/integration/**/*.test.js",
     "test:unit": "mocha test/src/unit/**/*.test.js",
-    "lint": "eslint . --fix --config ../eslint.config.mjs"
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
