--- a/server/notification_service/package.json
+++ b/server/notification_service/package.json
@@ -4,9 +4,9 @@
   "type":"module", 
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --env-file=.env ./src/app.js"
-
+    "dev": "nodemon --env-file=.env ./src/app.js",
+    "start": "node --env-file=.env ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
