--- a/server/auth_service/package.json
+++ b/server/auth_service/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon --env-file=.env ./src/app.js",
     "start": "node --env-file=.env ./src/app.js",
+    "build": "npm run lint && mkdir -p dist && cp -r src dist/",
     "test": "npm run test:unit && npm run test:integration",
     "test:integration": "mocha test/src/integration/**/*.test.js",
     "test:unit": "mocha test/src/unit/**/*.test.js",
